--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <link rel="manifest" href="/web-sdk-test/manifest.json">
         <script type="text/javascript">
-            var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-6' };
- 		             clevertap.account.push({ id: "WRK-485-456Z" }); // Web Testing       
+            var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-17' };
+ 		             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // QA Champs      
 	//	             clevertap.account.push({ id: "W88-4K6-646Z" }); // WCC Team      
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
 //             clevertap.account.push({ id: "RK4-898-W85Z" }); // WA rollout qa
@@ -19,9 +19,8 @@
             //    wzrk.src = "a.js";
                 //wzrk.src = "web_personalization_new_sdk";
 		//  wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/clevertap.min.js';  
-	//	  wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@master/clevertap.js';
-		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-3194/inbox_msg_order/clevertap.js';
-
+		  wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@master/clevertap.js';
+	//	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-3194/inbox_msg_order/clevertap.js';
 		    //    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2678/frequency_caps/clevertap.js';
 		//    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2521/popup_imageonly/clevertap.js';
 	// wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2041/web_inbox/clevertap.js'
