--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript">
             var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-14' };
  	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // QA Champs      
-		             clevertap.account.push({ id: "R99-655-K75Z" }); // WCC Team      
+		             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
 //             clevertap.account.push({ id: "RK4-898-W85Z" }); // WA rollout qa
                //clevertap.account.push({ id: "WRK-485-456Z" }); // Web Testing RK8-84W-K66Z
