--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <link rel="manifest" href="/web-sdk-test/manifest.json">
         <script type="text/javascript">
-		var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-17'};
-	//	var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
- 		             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // QA Champs 
+	//	var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-17'};
+		var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
+ 		             clevertap.account.push({ id: "47W-K8W-8W7Z" }); // Whipped Robot 
 	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
 //             clevertap.account.push({ id: "RK4-898-W85Z" }); // WA rollout qa
