--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <link rel="manifest" href="/web-sdk-test/manifest.json">
         <script type="text/javascript">
-	//	var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-26'};
-		var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
+		var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-26'};
+	//	var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
  		             clevertap.account.push({ id: "4RR-6Z7-Z86Z" }); // Whipped Robot 
 	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
