--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript">
 		var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-26'};
 	//	var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
- 		             clevertap.account.push({ id: "4RR-6Z7-Z86Z" }); // Whipped Robot 
+ 		             clevertap.account.push({ id: "R78-5K5-996Z" }); // Whipped Robot 
 	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
 //             clevertap.account.push({ id: "RK4-898-W85Z" }); // WA rollout qa
