Staging 10 BR Spartans

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript">
 		var clevertap = { event: [], profile: [], account: [], region: 'sk1-staging-10'};
 	//	var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
- 		             clevertap.account.push({ id: "RZ9-87W-986Z" }); // Web Squad  
+ 		             clevertap.account.push({ id: "W8W-897-865Z" }); // Web Squad  
 	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
 //             clevertap.account.push({ id: "RK4-898-W85Z" }); // WA rollout qa
