--- a/index.html
+++ b/index.html
@@ -2,6 +2,100 @@
 <html>
     <head>
         <link rel="manifest" href="/web-sdk-test/manifest.json">
+<script>
+  const personalizedSelectors = ['#bell-selector', '.nav', '#constantOUL', '#testdifferentimg'];
+  const delay = 2000; //time in ms;
+  (function (personalizedSelectors, delayTime) {
+    const retryElements = {}; // Track selectors that need retry
+    let retryCount = 0; // Counter for retries
+    let retryInterval;
+    function isInViewport (element) {
+      const rect = element.getBoundingClientRect();
+      const { innerHeight: windowHeight, innerWidth: windowWidth } = window;
+      return (
+        rect.bottom > 0 &&
+        rect.right > 0 &&
+        rect.top < windowHeight &&
+        rect.left < windowWidth
+      );
+    };
+    (function () {
+      const styleContent = `
+        .anti-flicker-hide {
+          opacity: 0 !important
+        }
+        .anti-flicker-show {
+          transition: opacity 0.5s, filter 0.5s !important
+        }
+      `;
+      // Create and append the style element if it doesn't exist
+      const styleId = 'flicker-style';
+      if (!document.getElementById(styleId)) {
+        const styleElement = document.createElement('style');
+        styleElement.id = styleId;
+        styleElement.textContent = styleContent;
+        document.head.appendChild(styleElement);
+      }
+    })();
+    function applyAntiFlicker (selectors) {
+      function processSelectors (selectorElements) {
+        const elements = [];
+        selectorElements.forEach(selector => {
+          const matchedElements = document.querySelectorAll(selector);
+          if (matchedElements.length) {
+            matchedElements.forEach(el => {
+		  console.log(isInViewport(el));
+              if (!isInViewport(el)) {
+		      console.log(el);
+                elements.push(el);
+              }
+            })
+            delete retryElements[selector]; // Successfully processed, remove from retry list
+          } else {
+            retryElements[selector] = false; // Add to retry list if not found
+          }
+        })
+        applyStyles(elements);
+      }
+      function retryProcessing () {
+        processSelectors(Object.keys(retryElements));
+        retryCount++;
+        if (Object.keys(retryElements).length === 0 || retryCount > 20) {
+          retryCount = 0;
+          clearInterval(retryInterval);
+        }
+      }
+      processSelectors(selectors);
+      if (Object.keys(retryElements).length) {
+        retryInterval = setInterval(retryProcessing, 100);
+      }
+    }
+    function applyStyles (elements) {
+      elements.forEach(el => el.classList.add('anti-flicker-hide'))
+        setTimeout(() => {
+          elements.forEach(el => {
+          el.classList.remove('anti-flicker-hide');
+          el.classList.add('anti-flicker-show');
+        })
+      }, delayTime) // Apply styles after maxRenderTime
+    }
+    function observeUrlChange () {
+      let previousHref = document.location.href;
+      const observer = new MutationObserver(() => {
+        if (previousHref !== document.location.href) {
+          previousHref = document.location.href;
+          applyAntiFlicker(personalizedSelectors);
+        }
+      })
+      observer.observe(document.body, { childList: true, subtree: true });
+    }
+    window.addEventListener('load', () => {
+      observeUrlChange();
+      applyAntiFlicker(personalizedSelectors);
+    })
+  })(personalizedSelectors, delay);
+</script>
+	    
         <script type="text/javascript">
 		const queryParams = new URLSearchParams(window.location.search)
 		const accountId = queryParams.get('accountId')
