--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 		const queryParams = new URLSearchParams(window.location.search)
 		const accountId = queryParams.get('accountId')
 		const region = queryParams.get('region')
-	//	var clevertap = { event: [], profile: [], account: [], region };
-		var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
+		var clevertap = { event: [], profile: [], account: [], region };
+	//	var clevertap = { event: [], profile: [], account: [], region: 'wus2', targetDomain: 'clevertap-prod-az.com' };
  		             clevertap.account.push({ id: accountId }); // Web Squad  
 	//	             clevertap.account.push({ id: "WR5-Z98-W56Z" }); // Web Testing       
 	//	              clevertap.account.push({ id: "W48-KW4-656Z" }); // WCC Team returns   
