--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ function renderCartDropOffPersonalisationCampaign (data) {
             }
 
 		setTimeout(() => {
-  clevertap.notifications.enable({'swPath': '/sw.js'})
+  clevertap.notifications.enable({'swPath': '/web-sdk-test/js/clevertap_sw.js'})
 }, 1000)
   </script>
               
