--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
 		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@7d16a5cc3cc17723819531c766c0783df8d8916c/clevertap.js';
 		    wzrk.onload = () => {
 			   console.log('loaded'); 
+			    console.log('clevertap.notifications', clevertap.notifications)
+			    		clevertap.notifications.push({
+		    "titleText": 'Wish to receive push notifications?',
+		    "bodyText": 'Click Yes to receive push notifications',
+		    "okButtonText": 'Yes',
+		    "rejectButtonText": 'No',
+		"serviceWorkerPath": '/web-sdk-test/js/clevertap_sw.js'});
 		    }
 		    // wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@master/clevertap.js';
                 var s = document.getElementsByTagName("script")[0];
