--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 		//    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2521/popup_imageonly/clevertap.js';
 	// wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2041/web_inbox/clevertap.js'
 	//	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@WEB-3338/clevertap.js';
-		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@0bf9c64c766192eeaf7e960249979ec2a209c74b/clevertap.js';
+//		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@0bf9c64c766192eeaf7e960249979ec2a209c74b/clevertap.js';
+		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@WEB-3474/clevertap.js';
+
 		    wzrk.onload = () => {
 			   console.log('loaded'); 
 			    console.log('clevertap.notifications', clevertap.notifications)
