--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 
 		    wzrk.onload = () => {
 			   console.log('loaded'); 
-		// 	    console.log('clevertap.notifications', clevertap.notifications)
-		// 	    		clevertap.notifications.push({
-		//     "titleText": 'Wish to receive push notifications?',
-		//     "bodyText": 'Click Yes to receive push notifications',
-		//     "okButtonText": 'Yes',
-		//     "rejectButtonText": 'No',
-		// "serviceWorkerPath": '/web-sdk-test/js/clevertap_sw.js'});
-		//     }
+			    console.log('clevertap.notifications', clevertap.notifications)
+			    		clevertap.notifications.push({
+		    "titleText": 'Wish to receive push notifications?',
+		    "bodyText": 'Click Yes to receive push notifications',
+		    "okButtonText": 'Yes',
+		    "rejectButtonText": 'No',
+		"serviceWorkerPath": '/web-sdk-test/js/clevertap_sw.js'});
+		    }
 			    clevertap.notifications.push({
           apnsWebPushId: "web.com.localhost.pushDemo", //only for safari browser
           apnsWebPushServiceUrl:
