--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	// wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/SDK-2041/web_inbox/clevertap.js'
 	//	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@WEB-3338/clevertap.js';
 //		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@0bf9c64c766192eeaf7e960249979ec2a209c74b/clevertap.js';
-		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@develop/clevertap.js';
+		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@b9ec8b1a15b14aa44540c5eeb1091909b5719814/clevertap.js';
 
 		    wzrk.onload = () => {
 			   console.log('loaded'); 
