--- a/index.html
+++ b/index.html
@@ -194,9 +194,15 @@ console.log('Chetan event listener added for Json');
 	    case "Cart drop-off": {
 			renderCartDropOffPersonalisationCampaign(data)
 			break;
+	    }
 		case "MAK1": {
 			renderCartDropOffPersonalisationCampaign(data)
 			break;
+		}
+		    default: {
+			renderCartDropOffPersonalisationCampaign(data)
+			break;
+		}
         }
     }
 });
