--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ function renderCartDropOffPersonalisationCampaign (data) {
             Clear Local Storage
         </button> -->
 	    
-	    <div id="ct-banner" class="chetanclass"></div>
+	    <div id="ct-banner" class="chetanclass">MAK HERE</div>
 	
 	    <div class="nav">
         <!-- <span id="inbox">Whats New</span> -->
