cdn link update

--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
 	//	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@WEB-3338/clevertap.js';
 //		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@0bf9c64c766192eeaf7e960249979ec2a209c74b/clevertap.js';
 	//	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@b9ec8b1a15b14aa44540c5eeb1091909b5719814/clevertap.js';
-		   wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@4bb53d1604a9051ed1f8109b222d76a74994237a/clevertap.js';
+		//   wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@4bb53d1604a9051ed1f8109b222d76a74994237a/clevertap.js';
+		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@8e070eb2ad1e78691253b69e989599a587fd528e/clevertap.js';
+
+		    wzrk.onload = () => {
 
 		    wzrk.onload = () => {
 			   console.log('loaded'); 
