--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       wzrk.async = true;
       //    wzrk.src = "a.js";
       //wzrk.src = "web_personalization_new_sdk";
-      //	  wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/clevertap.min.js';  
+      	  wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/clevertap.min.js';  
       //	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@prompt_bugfix/clevertap.js';
       // wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@web-2622-message-pivot-id/clevertap.min.js';
       //	     wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/visual-editor-security/clevertap.min.js';
@@ -129,7 +129,7 @@
 //		    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@0bf9c64c766192eeaf7e960249979ec2a209c74b/clevertap.js';
       //	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@b9ec8b1a15b14aa44540c5eeb1091909b5719814/clevertap.js';
       // wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@4bb53d1604a9051ed1f8109b222d76a74994237a/clevertap.js';
-      wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@8e070eb2ad1e78691253b69e989599a587fd528e/clevertap.js';
+   //   wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@8e070eb2ad1e78691253b69e989599a587fd528e/clevertap.js';
 
         wzrk.onload = () => {
           console.log('loaded');
