--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       wzrk.async = true;
       //    wzrk.src = "a.js";
       //wzrk.src = "web_personalization_new_sdk";
-      	  wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/clevertap.min.js';  
+      	//  wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/clevertap.min.js';  
+          wzrk.src = 'https://d2r1yp2w7bby2u.cloudfront.net/js/wzrk_dialog.min.js';
       //	    wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@prompt_bugfix/clevertap.js';
       // wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@web-2622-message-pivot-id/clevertap.min.js';
       //	     wzrk.src = 'https://cdn.jsdelivr.net/gh/CleverTap/clevertap-web-sdk@task/visual-editor-security/clevertap.min.js';
